tests/ui/parser/issues/issue-33455.stderr
error: expected one of `::`, `;`, or `as`, found `.`
  --> $DIR/issue-33455.rs:1:8
   |
LL | use foo.bar;
   |        ^ expected one of `::`, `;`, or `as`

error: aborting due to 1 previous error

