tests/ui/parser/issues/issue-33455.rs
use foo.bar; //~ ERROR expected one of `::`, `;`, or `as`, found `.`
